vlib/v/checker/tests/non_lvalue_as_voidptr.vv
fn add(a voidptr, b voidptr) int {
	return int(a) + int(b)
}

println(add(5, 10))
